--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
             <button class="button">Registrarse</button>
         </nav>
     </header>
+    <section class="home"></section>
 </body>
 </html>
