--- a/index.html
+++ b/index.html
@@ -23,6 +23,57 @@
             <button class="button">Registrarse</button>
         </nav>
     </header>
-    <section class="home"></section>
+    <section class="home">
+        <div class="form_container">
+            <i class="uil uil-times form_close"></i>
+            <div class="form login_form">
+                <form action="#">
+                 <h2> Login </h2>
+                 <div class="input_box">
+                    <input type="email" placeholder="Ingresa tu Email"  required />
+                    <i class="uil uil-envelope-alt email"></i>
+                 </div>
+                 <div class="input_box">
+                    <input type="password" placeholder="Ingresa tu Contraseña" required />
+                    <i class="uil uil-lock password"></i>
+                    <i class="uil uil-eye-slash pw_hide"></i>
+                 </div>
+                 <div class="option_field">
+                    <span class="checkbox">
+                        <input type="checkbox" id="check">
+                        <label for="check">Recuérdala</label>
+                    </span>
+                    <a href="#" class="forgot_pw">¿Olvido su Contraseña?</a>
+                 </div>
+                 <button class="button">Registrarse</button>
+                 <div class="login_signup">
+                    ¿No tiene una cuenta? <a href="#" id="signup">Inscribirse</a>
+                 </div>
+                </form>
+            </div>
+            <div class="form signup_form">
+                <form action="#">
+                 <h2> Sign-Up </h2>
+                 <div class="input_box">
+                    <input type="email" placeholder="Ingresa tu Email"  required />
+                    <i class="uil uil-envelope-alt email"></i>
+                 </div>
+                 <div class="input_box">
+                    <input type="password" placeholder="Crea tu Contraseña" required />
+                    <i class="uil uil-lock password"></i>
+                    <i class="uil uil-eye-slash pw_hide"></i>
+                 </div>
+                 <div class="input_box">
+                    <input type="password" placeholder="Confirma tu Contraseña" required />
+                    <i class="uil uil-lock password"></i>
+                    <i class="uil uil-eye-slash pw_hide"></i>
+                 </div>
+                 <button class="button">Inscribirse</button>
+                 <div class="login_signup"> ¿Ya tiene una cuenta? <a href="#" id="signup">Registrese</a>
+                 </div>
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
