js file created and done it

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#" class="nav_link">Contacto</a>
                 </li>
             </ul>
-            <button class="button">Registrarse</button>
+            <button class="button" id="form-open">Registrarse</button>
         </nav>
     </header>
     <section class="home">
@@ -69,11 +69,12 @@
                     <i class="uil uil-eye-slash pw_hide"></i>
                  </div>
                  <button class="button">Inscribirse</button>
-                 <div class="login_signup"> ¿Ya tiene una cuenta? <a href="#" id="signup">Registrese</a>
+                 <div class="login_signup"> ¿Ya tiene una cuenta? <a href="#" id="login">Registrese</a>
                  </div>
                 </form>
             </div>
         </div>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
