--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
                     </span>
                     <a href="#" class="forgot_pw">¿Olvido su Contraseña?</a>
                  </div>
-                 <button class="button">Registrarse</button>
+                 <button class="button" id="sweetalert1">Registrarse</button>
+                 <script>
+                    document.getElementById('sweetalert1').addEventListener('click', function(){
+                        Swal.fire('Te has registrado')
+                    });
+                 </script>
                  <div class="login_signup">
                     ¿No tiene una cuenta? <a href="#" id="signup">Inscribirse</a>
                  </div>
@@ -68,7 +73,12 @@
                     <i class="uil uil-lock password"></i>
                     <i class="uil uil-eye-slash pw_hide"></i>
                  </div>
-                 <button class="button">Inscribirse</button>
+                 <button class="button" id="sweetalert">Inscribirse</button>
+                 <script>
+                    document.getElementById('sweetalert').addEventListener('click', function(){
+                        Swal.fire('Te has inscrito')     
+                    })
+                 </script>
                  <div class="login_signup"> ¿Ya tiene una cuenta? <a href="#" id="login">Registrese</a>
                  </div>
                 </form>
@@ -76,5 +86,6 @@
         </div>
     </section>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
